<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>more_vehicle_description</name>
  <version>0.1.0</version>
  <description>The more_vehicle_description package</description>
  <maintainer email="m.vandervloet@student.han.nl">Mick van der Vloet</maintainer>
  <maintainer email="n.maslovs@student.han.nl">Nikolajs Maslovs</maintainer>
  <maintainer email="a.gkougkoulidis@student.han.nl">Antonis Gkougkoulidis</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
